--- a/info/templates/index.html
+++ b/info/templates/index.html
@@ -20,15 +20,28 @@
                 <li data-cid="4"><a href="javascript:;">外汇</a></li>
                 <li data-cid="5"><a href="javascript:;">公司</a></li>
             </ul>
-            <div class="user_btns fr">
-                <a href="javascript:;" class="login_btn">登录</a> / <a href="javascript:;" class="register_btn">注册</a>
-            </div>
+
+           {% if data.user_info %}
+
             <!-- 用户登录后显示下面，隐藏上面 -->
-            <div class="user_login fr">
-                <img src="../static/news/images/person01.png" class="lgin_pic">
-                <a href="#">用户张三</a>
-                <a href="#">退出</a>
-            </div>
+             <div class="user_login fr">
+                    <img src="{% if data.user_info.avatar_url %}{{ data.user_info.avatar_url }}
+
+                    {% else %}../../static/news/images/person01.png{% endif %}" class="lgin_pic">
+
+                    <a href="#">{{ data.user_info.nick_name }}</a>
+
+                    <a href="javascript:;" onclick=login_out()>退出</a>
+
+                </div>
+            {% else %}
+                 <div class="user_btns fr">
+                    <a href="javascript:;" class="login_btn">登录</a> / <a href="javascript:;" class="register_btn">注册</a>
+                 </div>
+            {% endif %}
+
+
+
         </div>
     </div>
     
@@ -85,14 +98,14 @@
             <div class="rank_title">
                 <h3>点击排行</h3>
             </div>
-            <ul class="rank_list">
-                <li><span class="first">1</span><a href="#">势如破竹！人民币再度连闯四道关口 在岸、离岸双双升破6.42</a></li>
-                <li><span class="second">2</span><a href="#">凛冬已至，还有多少银行人在假装干银行</a></li>
-                <li><span class="third">3</span><a href="#">人民日报：部分城市楼市放松限制引关注，楼市调控不会“拉抽屉”</a></li>
-                <li><span>4</span><a href="#">势如破竹！人民币再度连闯四道关口 在岸、离岸双双升破6.42</a></li>
-                <li><span>5</span><a href="#">凛冬已至，还有多少银行人在假装干银行</a></li>
-                <li><span>6</span><a href="#">人民日报：部分城市楼市放松限制引关注，楼市调控不会“拉抽屉”</a></li>
-            </ul>
+                <ul class="rank_list">
+
+                {% for news in data.newsClicksList %}
+
+                    <li><span class="{{ loop.index | do_index_class}}">{{ loop.index }}</span><a href="#">{{ news.title }}</a></li>
+                {% endfor %}
+
+                </ul>
         </div>
     </div>
     <div class="footer">        
