--- a/info/templates/news/detail.html
+++ b/info/templates/news/detail.html
@@ -23,35 +23,41 @@
 
         <div class="detail_about clearfix">
 
-          <span class="time_souce fl">{{ data.news.create_time }} 来源: {{ data.news.source }}</span>
+            <span class="time_souce fl">{{ data.news.create_time }} 来源: {{ data.news.source }}</span>
 
-          <span class="comment fr">{{ data.news.comments_count }}</span>
+            <span class="comment fr">{{ data.news.comments_count }}</span>
 
         </div>
-       {#safe：表示新闻内容是安全可以按照html解析后展示#}
-      {{ data.news.content | safe }}
+        {#safe：表示新闻内容是安全可以按照html解析后展示#}
+        {{ data.news.content | safe }}
 
-        <a href="javascript:;" class="collected block-center" data-newid="{{ data.news.id }}" style="display: {% if data.is_collected %} block
-        {% else %} none {% endif %};"><span class="out">已收藏</span><span class="over">取消收藏</span></a>
-        <a href="javascript:;" class="collection block-center" data-newid="{{ data.news.id }}" style="display: {% if data.is_collected %} none
-        {% else %} block {% endif %};">收藏</a>
+        <a href="javascript:;" class="collected block-center" data-newid="{{ data.news.id }}"
+           style="display: {% if data.is_collected %} block
+           {% else %} none {% endif %};"><span class="out">已收藏</span><span class="over">取消收藏</span></a>
+        <a href="javascript:;" class="collection block-center" data-newid="{{ data.news.id }}"
+           style="display: {% if data.is_collected %} none
+           {% else %} block {% endif %};">收藏</a>
 
-
-        <div class="comment_form_logout">
-            登录发表你的评论
-        </div>
-
-        <form action="" class="comment_form">
-            <div class="person_pic">
-                <img src="../../static/news/images/cat.jpg" alt="用户图标">
+        {% if data.user_info %}
+            <form action="" class="comment_form" data-newsid="{{ data.news.id }}">
+                <div class="person_pic">
+                    <img src="{% if data.user_info.avatar_url %}
+                            {{ data.user_info.avatar_url }}
+                {% else %}
+                        ../../static/news/images/person01.png
+                {% endif %}" alt="用户图标">
+                </div>
+                <textarea placeholder="请发表您的评论" class="comment_input"></textarea>
+                <input type="submit" name="" value="评 论" class="comment_sub">
+            </form>
+        {% else %}
+            <div class="comment_form_logout">
+                登录发表你的评论
             </div>
-            <textarea placeholder="请发表您的评论" class="comment_input"></textarea>
-            <input type="submit" name="" value="评 论" class="comment_sub">
-        </form>
-
+        {% endif %}
 
         <div class="comment_count">
-            4条评论
+            {{ data.news.comments_count }}条评论
         </div>
 
         <div class="comment_list_con">
@@ -73,7 +79,7 @@
                 <a href="javascript:;" class="comment_up has_comment_up fr">1</a>
                 <a href="javascript:;" class="comment_reply fr">回复</a>
                 <from class="reply_form fl">
-                    <textarea  class="reply_input"></textarea>
+                    <textarea class="reply_input"></textarea>
                     <input type="submit" name="" value="回复" class="reply_sub fr">
                     <input type="reset" name="" value="取消" class="reply_cancel fr">
                 </from>
@@ -91,7 +97,7 @@
                 <a href="javascript:;" class="comment_up fr">赞</a>
                 <a href="javascript:;" class="comment_reply fr">回复</a>
                 <from class="reply_form fl">
-                    <textarea  class="reply_input"></textarea>
+                    <textarea class="reply_input"></textarea>
                     <input type="submit" name="" value="回复" class="reply_sub fr">
                     <input type="reset" name="" value="取消" class="reply_cancel fr">
                 </from>
@@ -109,7 +115,7 @@
                 <a href="javascript:;" class="comment_up fr">赞</a>
                 <a href="javascript:;" class="comment_reply fr">回复</a>
                 <from class="reply_form fl">
-                    <textarea  class="reply_input"></textarea>
+                    <textarea class="reply_input"></textarea>
                     <input type="submit" name="" value="回复" class="reply_sub fr">
                     <input type="reset" name="" value="取消" class="reply_cancel fr">
                 </from>
@@ -127,7 +133,7 @@
                 <a href="javascript:;" class="comment_up fr">赞</a>
                 <a href="javascript:;" class="comment_reply fr">回复</a>
                 <from class="reply_form fl">
-                    <textarea  class="reply_input"></textarea>
+                    <textarea class="reply_input"></textarea>
                     <input type="submit" name="" value="回复" class="reply_sub fr">
                     <input type="reset" name="" value="取消" class="reply_cancel fr">
                 </from>
@@ -135,21 +141,21 @@
         </div>
 
 
-        </div>
+    </div>
 
 {% endblock %}
 
 {% block authorBlock %}
 
     <div class="author_card">
-                <a href="#" class="author_pic"><img src="../../static/news/images/user_pic.png" alt="author_pic"></a>
-                <a href="#" class="author_name">张大山</a>
-                <div class="author_resume">张大山的简介,张大山</div>
-                <div class="writings"><span>总篇数</span><b>23</b></div>
-                <div class="follows"><span>粉丝</span><b>36</b></div>
-                <a href="javascript:;" class="focus fr">关注</a>
-                <a href="javascript:;" class="focused fr"><span class="out">已关注</span><span class="over">取消关注</span></a>
-            </div>
+        <a href="#" class="author_pic"><img src="../../static/news/images/user_pic.png" alt="author_pic"></a>
+        <a href="#" class="author_name">张大山</a>
+        <div class="author_resume">张大山的简介,张大山</div>
+        <div class="writings"><span>总篇数</span><b>23</b></div>
+        <div class="follows"><span>粉丝</span><b>36</b></div>
+        <a href="javascript:;" class="focus fr">关注</a>
+        <a href="javascript:;" class="focused fr"><span class="out">已关注</span><span class="over">取消关注</span></a>
+    </div>
 
 {% endblock %}
 
